# cglm-beef

./: BeefProj.toml  BeefSpace.toml  CMakeLists.txt  build.sh  build.ts  build_libs.bat
example/: BeefProj.toml
example/src/: Program.bf
libs/: cglm.lib
libs/windows/: cglm.lib  cglmd.lib
libs/windows/x64/: cglm.lib  cglm_d.lib
src/: aabb2d.bf  affine.bf  affine2d-post.bf  affine2d.bf  bezier.bf  box.bf  cam.bf  cglm.bf  color.bf  curve.bf  ease.bf  euler.bf  frustum.bf  io.bf  ivec2.bf  ivec3.bf  ivec4.bf  mat2.bf  mat2x3.bf  mat2x4.bf  mat3.bf  mat3x2.bf  mat3x4.bf  mat4.bf  mat4x2.bf  mat4x3.bf  noise.bf  plane.bf  project.bf  quat.bf  ray.bf  sphere.bf  types.bf  util.bf  vec2.bf  vec3.bf  vec4.bf
